	PR middle-end/45621 	* g++.dg/lto/pr45621.h : New. 	* g++.dg/lto/pr45621_0.C: New. 	* g++.dg/lto/pr45621_1.C: New. 	* cgraph.c (cgraph_update_edges_for_call_stmt_node): When new call is 	redirected to clone, be happy. 	* cgraph.h (cgraph node): Enable former_clone_of unconditinally. 	* cgraphunit.c (verify_cgraph_node, cgraph_materialize_clone): Handle 	former_clone_of unconditinally.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@165492 138bc75d-0d04-0410-961f-82ee72b054a4